# gmix

./: .gitmodules  CMakeLists.txt  README.md
include/: BaseStrategy.hpp  Common.hpp  ExpectationMaximizationStrategy.hpp  FittingStrategy.hpp  GaussianComponent.hpp  GaussianMixture.hpp  KMeansStrategy.hpp  Statistics.hpp  TypeTraits.hpp  VariationalBayesianInferenceStrategy.hpp  base_strategy.hpp  common.hpp  expectation_maximization_policy.hpp  expectation_maximization_policy_impl.hpp  expectation_maximization_strategy.hpp  expectation_maximization_strategy_impl.hpp  gaussian_component.hpp  gaussian_mixture.hpp  gmix_traits.hpp  kmeans_policy.hpp  kmeans_policy_impl.hpp  kmeans_strategy.hpp  kmeans_strategy_impl.hpp  matrix_traits.hpp  null_policy.hpp  null_strategy.hpp  statistics.hpp  variational_bayesian_inference_policy.hpp  variational_bayesian_inference_policy_impl.hpp  variational_bayesian_inference_strategy.hpp  variational_bayesian_inference_strategy_impl.hpp  variational_evidence_lower_bound.hpp
test/: CMakeLists.txt  TestHelpers.hpp  test_common.cpp  test_expectation_maximization_policy.cpp  test_expectation_maximization_policy_impl.cpp  test_expectation_maximization_strategy.cpp  test_fitting.cpp  test_gaussian_component.cpp  test_gaussian_mixture.cpp  test_helpers.hpp  test_kmeans_policy.cpp  test_kmeans_policy_impl.cpp  test_kmeans_strategy.cpp  test_sampling.cpp  test_statistics.cpp  test_variational_bayesian_inference_policy.cpp  test_variational_bayesian_inference_policy_impl.cpp  test_variational_bayesian_inference_strategy.cpp
